initial files frontend backend added navbar (vertical) modified FacultyPage.html

--- a/FacultyPage.html
+++ b/FacultyPage.html
@@ -2,7 +2,63 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <title> Home </title>
+    <link href="album.css" rel="stylesheet">
 </head>
+
+<body>
+    <!-- navbar -->
+    <div class="container">
+        <!-- Home -->
+        <div class="container" id="c1">
+            <nav class="navbar navbar-expand navbar-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
+
+                <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul>
+                        <!-- to add section heading modify id of section to redirect to
+        <li class="nav-item">
+            <a class="nav-link" href="#" data-target="#id"> section title </a>
+        </li>
+                            -->
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#" data-target="#home"> HOME </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="#about">ABOUT </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="#course"> COURSES </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="#education"> EDUCATION </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="#work"> WORK </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="#contact"> CONTACT </a>
+                        </li>
+
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+</body>
 
 </html>
