affixed navbar to left added container to right of navbar added placeholders

--- a/FacultyPage.html
+++ b/FacultyPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -11,45 +11,65 @@
 </head>
 
 <body>
-    <!-- navbar -->
+    <!-- Page container -->
     <div class="container">
-        <!-- Home -->
+        <!-- navbar -->
+        <nav class="navbar navbar-expand navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
+
+            <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul>
+                    <!-- to add section heading modify id of section to redirect to
+                <li class="nav-item">
+                    <a class="nav-link" href="#" data-target="#id"> section title </a>
+                </li>
+                                    -->
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#" data-target="#home"> HOME </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-target="#about">ABOUT </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-target="#course"> COURSES </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-target="#education"> EDUCATION </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-target="#work"> WORK </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-target="#contact"> CONTACT </a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content -->
+        <!-- Add content and id in this container -->
         <div class="container" id="c1">
-            <nav class="navbar navbar-expand navbar-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
-
-                <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul>
-                        <!-- to add section heading modify id of section to redirect to
-        <li class="nav-item">
-            <a class="nav-link" href="#" data-target="#id"> section title </a>
-        </li>
-                            -->
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#" data-target="#home"> HOME </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-target="#about">ABOUT </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-target="#course"> COURSES </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-target="#education"> EDUCATION </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-target="#work"> WORK </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" data-target="#contact"> CONTACT </a>
-                        </li>
-
-                    </ul>
-                </div>
-            </nav>
+            <ul style="position:center;">
+                <li>
+                    text
+                </li>
+                <li>
+                    text
+                </li>
+                <li>
+                    text
+                </li>
+                <li>
+                    text
+                </li>
+            </ul>
+            <img src="assets/img/blank_img.jpg" />
+            <img src="assets/img/x.jpg" />
+            <img src="assets/img/y.jpg" />
+            <img src="assets/img/z.jpg" />
         </div>
     </div>
     <!-- Bootstrap core JavaScript
