--- a/FacultyPage.html
+++ b/FacultyPage.html
@@ -11,57 +11,56 @@
 </head>
 
 <body>
-    <!-- Page container -->
-    <div class="container">
+    <!-- Page Content -->
         <!-- navbar -->
-        <!-- Change profile picture here -->
         <nav class="navbar navbar-expand navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
 
             <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- Profile circle image -->
+            <!-- Profile image -->
             <!--
-                <img class="img-circle" src="assets/img/image_name.jpg" />
-             -->
-            <div class="card-img-top; img-circle" style="position: relative; margin-bottom: 30%; margin-top: 30%;">
+        <img class="img-circle" src="assets/img/image_name.jpg" />
+            -->
+            <div class="card-img-top; img-circle" style="position: relative; margin-top: 25%;">
                 <a href="#">
                     <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
-                    <div class="overlay">
-                        <div class="text">
-                            NAME
-                        </div>
-                    </div>
                 </a>
             </div>
+            <!-- Name -->
+            <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> DR. FIRSTNAME LASTNAME </p>
             <!--  -->
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul>
+                <ul style="list-style-type:none;">
                     <!-- to add section heading modify id of section to redirect to
-            <li class="nav-item">
-                <a class="nav-link" href="#" data-target="#id"> section title </a>
-            </li>
-                                -->
+    <li class="nav-item">
+        <a class="nav-link" href="#" data-target="#id"> section title </a>
+    </li>
+                        -->
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" data-target="#home"> HOME </a>
+                        <a class="nav-link" href="#"> HOME </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-target="#about">ABOUT </a>
+                        <a class="nav-link" href="#">ABOUT </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-target="#course"> COURSES </a>
+                        <a class="nav-link" href="courses.html"> COURSES </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-target="#education"> EDUCATION </a>
+                        <a class="nav-link" href="#"> EDUCATION </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-target="#work"> WORK </a>
+                        <a class="nav-link" href="#"> PROJECTS </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-target="#contact"> CONTACT </a>
+                        <a class="nav-link" href="#"> EXPERIENCE </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> PUBLICATIONS </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> CONTACT </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -114,7 +113,6 @@
             <img src="assets/img/x.jpg" />
             <img src="assets/img/y.jpg" />
         </div>
-    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
