--- a/courses.html
+++ b/courses.html
@@ -1,6 +1,6 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,27 +9,84 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Dr. Zhang</title>
-  </head>
-  <body>
-    <h1>Courses taught</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <div class="card bg-light mb-3" style="max-width: 18rem;">
-            <div class="card-header">Header</div>
-            <div class="card-body">
-              <h5 class="card-title">Light card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link href="album.css" rel="stylesheet">
+
+</head>
+  <body>
+      <!-- navbar -->
+      <nav class="navbar navbar-expand navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
+
+          <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Profile image -->
+          <!--
+        <img class="img-circle" src="assets/img/image_name.jpg" />
+            -->
+          <div class="card-img-top; img-circle" style="position: relative; margin-top: 25%;">
+              <a href="#">
+                  <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
+              </a>
+          </div>
+          <!-- Name -->
+          <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> DR. FIRSTNAME LASTNAME </p>
+          <!--  -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul style="list-style-type:none;">
+                  <!-- to add section heading modify id of section to redirect to
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> section title </a>
+                </li>
+                                    -->
+                  <li class="nav-item">
+                      <a class="nav-link" href="#"> HOME </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">ABOUT </a>
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="courses.html"> COURSES </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#"> EDUCATION </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#"> PROJECTS </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#"> EXPERIENCE </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#"> PUBLICATIONS </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#"> CONTACT </a>
+                  </li>
+
+              </ul>
+          </div>
+      </nav>
+
+      <div class="container" id="c1">
+          <h1>Courses taught</h1>
+          <div class="row">
+              <div class="col-4">
+                  <div class="card bg-light mb-3" style="max-width: 18rem;">
+                      <div class="card-header">Header</div>
+                      <div class="card-body">
+                          <h5 class="card-title">Light card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
