added projects.html modified navbar hrefs in html files renamed facultypage.html to home.html

--- a/home.html
+++ b/home.html
@@ -50,10 +50,10 @@
                         <a class="nav-link" href="#"> EDUCATION </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> PROJECTS </a>
+                        <a class="nav-link" href="projects.html"> PROJECTS </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> EXPERIENCE </a>
+                        <a class="nav-link" href="projects.html#experience"> EXPERIENCE </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"> PUBLICATIONS </a>
