--- a/courses.html
+++ b/courses.html
@@ -40,7 +40,7 @@
                 </li>
                                     -->
                   <li class="nav-item">
-                      <a class="nav-link" href="#"> HOME </a>
+                      <a class="nav-link" href="home.html"> HOME </a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#">ABOUT </a>
@@ -52,10 +52,10 @@
                       <a class="nav-link" href="#"> EDUCATION </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"> PROJECTS </a>
+                      <a class="nav-link" href="projects.html"> PROJECTS </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"> EXPERIENCE </a>
+                      <a class="nav-link" href="projects.html#experience"> EXPERIENCE </a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#"> PUBLICATIONS </a>
