Improvements to cards, includes pictures and bottom text

--- a/courses.html
+++ b/courses.html
@@ -30,7 +30,7 @@
               </a>
           </div>
           <!-- Name -->
-          <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> DR. FIRSTNAME LASTNAME </p>
+          <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> Dr. Ting Zhang </p>
           <!--  -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul style="list-style-type:none;">
@@ -71,17 +71,87 @@
       <div class="container" id="c1">
           <h1>Courses taught</h1>
           <div class="row">
-              <div class="col-4">
-                  <div class="card bg-light mb-3" style="max-width: 18rem;">
-                      <div class="card-header">Header</div>
-                      <div class="card-body">
-                          <h5 class="card-title">Light card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      </div>
-                  </div>
+            <div class="col-3">
+             <div class="card-deck">
+              <div class="card">
+              <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
+            </div>
           </div>
-      </div>
+            <div class="col-3">
+              <div class="card">
+                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card">
+                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            </div>
+
+            <div class="row">
+            <div class="col-3">
+             <div class="card-deck">
+              <div class="card">
+              <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="col-3">
+              <div class="card">
+                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card">
+                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+            </div>
+          </div>
 
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
