Added collapse panels Added experience.html Added teaching experience timeline centered name text in navbar

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                 </a>
             </div>
             <!-- Name -->
-            <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> DR. FIRSTNAME LASTNAME </p>
+            <p class="name" style="color:black; padding-top:10px; position:center; font-weight:bold;"> DR. FIRSTNAME LASTNAME </p>
             <!--  -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul style="list-style-type:none;">
@@ -53,7 +53,7 @@
                         <a class="nav-link" href="projects.html"> PROJECTS </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html#experience"> EXPERIENCE </a>
+                        <a class="nav-link" href="experience.html"> EXPERIENCE </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"> PUBLICATIONS </a>
