--- a/courses.html
+++ b/courses.html
@@ -30,7 +30,7 @@
               </a>
           </div>
           <!-- Name -->
-          <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> Dr. Ting Zhang </p>
+          <p class="name" style="color:black; padding-top:10px; position:center; font-weight:bold;"> Dr. Ting Zhang </pclass="name">
           <!--  -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul style="list-style-type:none;">
@@ -55,7 +55,7 @@
                       <a class="nav-link" href="projects.html"> PROJECTS </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="projects.html#experience"> EXPERIENCE </a>
+                      <a class="nav-link" href="experience.html"> EXPERIENCE </a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#"> PUBLICATIONS </a>
