--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <!-- Name -->
-        <p style="color:black; padding-top:10px; position:center; font-weight:bold;"> DR. FIRSTNAME LASTNAME </p>
+        <p class="name" style="color:black; padding-top:10px; font-weight:bold;"> Dr. Ting Zhang </p>
         <!--  -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul style="list-style-type:none;">
@@ -50,10 +50,10 @@
                     <a class="nav-link" href="#"> EDUCATION </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="projects.html"> PROJECTS </a>
+                    <a class="nav-link" href="projects.html"> PROJECTS  </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#experience"> EXPERIENCE </a>
+                    <a class="nav-link" href="experience.html"> EXPERIENCE </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"> PUBLICATIONS </a>
@@ -67,26 +67,79 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
-        <!-- Images will cycle automatically -->
-        <ul style="position:center;">
-            <li>
-                text
-            </li>
-            <li>
-                text
-            </li>
-            <li>
-                text
-            </li>
-            <li>
-                text
-            </li>
-        </ul>
-        <div class="card" id="experience">
-            <p> text </p>
+        <!-- Projects -->
+        <h4> PROJECTS </h4>
+        <!-- ROW 1 -->
+        <div class="row">
+            <!-- CARD 1 -->
+            <div class="col-4">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
+                    <div class="card-header">Header</div>
+                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Light card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- CARD 2 -->
+            <div class="col-4">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <h5 class="card-title">Light card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- CARD 3 -->
+            <div class="col-4">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <h5 class="card-title">Light card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <img src="assets/img/blank_img.jpg" />
+        <!-- ROW 2 -->
+        <div class="row">
+            <!-- CARD 1 -->
+            <div class="col-4">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <h5 class="card-title">Light card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- CARD 2 -->
+            <div class="col-4">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <h5 class="card-title">Light card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- CARD 3 -->
+            <div class="col-4">
+                <div class="card bg-light mb-3" style="max-width: 20rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <h5 class="card-title">Light card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END OF PROJECTS SECTION -->
     </div>
+    <!-- JavaScript -->
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
