--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <!--
         <img class="img-circle" src="assets/img/image_name.jpg" />
             -->
-            <div class="card-img-top; img-circle" style="position: relative; margin-top: 25%;">
+            <div class="card-img-top img-circle" style="position: relative; margin-top: 25%;">
                 <a href="#">
                     <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
                 </a>
