--- a/courses.html
+++ b/courses.html
@@ -76,7 +76,7 @@
               <div class="card">
               <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">CS 3304: Data and Information Structures</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer">
@@ -89,7 +89,7 @@
               <div class="card">
                 <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">CS 2401: Computer Organization</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="card-footer">
@@ -101,7 +101,7 @@
               <div class="card">
                 <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">CS 2410: Introduction to Data Structures and Algorithms</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="card-footer">
