--- a/courses.html
+++ b/courses.html
@@ -13,150 +13,150 @@
     <link href="album.css" rel="stylesheet">
 
 </head>
-  <body>
-      <!-- navbar -->
-      <nav class="navbar navbar-expand navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
-
-          <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Profile image -->
-          <!--
+<body>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
+        <!-- Profile image -->
+        <!--
         <img class="img-circle" src="assets/img/image_name.jpg" />
             -->
-          <div class="card-img-top img-circle" style="position: relative; margin-top: 25%;">
-              <a href="#">
-                  <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
-              </a>
-          </div>
-          <!-- Name -->
-          <p class="name" style="color:black; padding-top:10px; position:center; font-weight:bold;"> Dr. Ting Zhang </pclass="name">
-          <!--  -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul style="list-style-type:none;">
-                  <!-- to add section heading modify id of section to redirect to
+        <div class="card-img-top img-circle collapse navbar-collapse" style="position: relative; margin-top: 25%;">
+            <a href="#">
+                <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
+            </a>
+        </div>
+        <!--  -->
+        <button class="navbar-toggler-left navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Name -->
+        <p class="name" style="color:black; padding-top:10px; font-weight:bold;"> Dr. Ting Zhang </p>
+        <!--  -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul style="list-style-type:none;">
+                <!-- to add section heading modify id of section to redirect to
                 <li class="nav-item">
                     <a class="nav-link" href="#"> section title </a>
                 </li>
                                     -->
-                  <li class="nav-item">
-                      <a class="nav-link" href="home.html"> HOME </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">ABOUT </a>
-                  </li>
-                  <li class="nav-item active">
-                      <a class="nav-link" href="courses.html"> COURSES </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"> EDUCATION </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="projects.html"> PROJECTS </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="experience.html"> EXPERIENCE </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"> PUBLICATIONS </a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"> CONTACT </a>
-                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="home.html"> HOME </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">ABOUT </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="courses.html"> COURSES </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> EDUCATION </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="projects.html"> PROJECTS </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="experience.html"> EXPERIENCE </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> PUBLICATIONS </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> CONTACT </a>
+                </li>
 
-              </ul>
-          </div>
-      </nav>
+            </ul>
+        </div>
+    </nav>
 
-      <div class="container" id="c1">
-          <h1>Courses taught</h1>
-          <div class="row">
+    <div class="container" id="c1">
+        <h1>Courses taught</h1>
+        <div class="row">
             <div class="col-3">
-             <div class="card-deck">
-              <div class="card">
-              <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">CS 3304: Data and Information Structures</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">CS 3304: Data and Information Structures</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
-              </div>
-            </div>
-          </div>
-            <div class="col-3">
-              <div class="card">
-                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">CS 2401: Computer Organization</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
-              </div>
             </div>
             <div class="col-3">
-              <div class="card">
-                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">CS 2410: Introduction to Data Structures and Algorithms</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <div class="card">
+                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">CS 2401: Computer Organization</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">CS 2410: Introduction to Data Structures and Algorithms</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
                 </div>
-              </div>
             </div>
-            </div>
+        </div>
 
-            <div class="row">
+        <div class="row">
             <div class="col-3">
-             <div class="card-deck">
-              <div class="card">
-              <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
-              </div>
-            </div>
-          </div>
-            <div class="col-3">
-              <div class="card">
-                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </div>
-              </div>
             </div>
             <div class="col-3">
-              <div class="card">
-                <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <div class="card">
+                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
                 </div>
-                <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
                 </div>
-              </div>
             </div>
-            </div>
-          </div>
+        </div>
+    </div>
 
-      <!-- Optional JavaScript -->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
 </html>
