--- a/experience.html
+++ b/experience.html
@@ -6,27 +6,27 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <title> Home </title>
+    <title> Experience </title>
     <link href="album.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Page Content -->
     <!-- navbar -->
-    <nav class="navbar navbar-expand navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
-
-        <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="color:white; vertical-align: middle; align-content:center;" id="nav1">
         <!-- Profile image -->
         <!--
         <img class="img-circle" src="assets/img/image_name.jpg" />
             -->
-        <div class="card-img-top img-circle" style="position: relative; margin-top: 25%;">
+        <div class="card-img-top img-circle collapse navbar-collapse" style="position: relative; margin-top: 25%;">
             <a href="#">
                 <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
             </a>
         </div>
+        <!--  -->
+        <button class="navbar-toggler-left navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <!-- Name -->
         <p class="name" style="color:black; padding-top:10px; font-weight:bold;"> Dr. Ting Zhang </p>
         <!--  -->
@@ -67,8 +67,22 @@
     <!-- Page Content -->
     <!-- Add content and id in this container -->
     <div class="container" id="c1">
+        <h3 style="padding-top:10px;"> EXPERIENCE </h3>
+        <!-- Research and Teaching Interests -->
+        <div id="projects-overview">
+            <p>
+                <b style="font-size: 16pt;"> Research and Teaching Interests </b>
+                <ul>
+                    <li> Data Analysis and Machine Learning </li>
+                    <li> Computer Networks and Mobile Computing </li>
+                    <li> Bioinformatics and Healthcare Informatics </li>
+                    <li> Virtual Reality and Human-Machine Interaction </li>
+                    <li> Wearable Sensors and Embedded Systems </li>
+                </ul>
+            </p>
+        </div>
         <!-- Research Experience -->
-        <h4 style="padding-top:10px;"> RESEARCH EXPERIENCE </h4>
+        <h3 style="padding-top:10px;"> RESEARCH EXPERIENCE </h3>
         <!--Collapse/ Expand Panel -->
         <!-- To add another panel, copy/paste and rename data-target, id of the respective panel to same unique names -->
         <div class="panel-group" id="panelGroup">
@@ -207,7 +221,7 @@
         <!-- END OF RESEARCH EXPERIENCE SECTION -->
         <!-- Timeline -->
         <!-- Teaching Experience -->
-        <h4> TEACHING EXPERIENCE </h4>
+        <h3 style="padding-top:10px;"> TEACHING EXPERIENCE </h3>
         <br />
         <div class="timeline left" style="padding-bottom:10px;">
             <!-- Event 1 -->
