--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             -->
             <div class="card-img-top img-circle" style="position: relative; margin-top: 25%;">
                 <a href="#">
-                    <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
+                    <img class="img-circle" src="assets/img/TingZhang.jpg" />
                 </a>
             </div>
             <!-- Name -->
