added education page

--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
             -->
         <div class="card-img-top img-circle collapse navbar-collapse" style="position: relative; margin-top: 25%;">
             <a href="#">
-                <img class="img-circle" src="http://pinegrow.com/placeholders/img16.jpg" />
+                <img class="img-circle" src="assets/img/blank_img.jpg" />
             </a>
         </div>
         <!--  -->
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="courses.html"> COURSES </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> EDUCATION </a>
+                    <a class="nav-link" href="education.html"> EDUCATION </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html"> PROJECTS  </a>
@@ -69,7 +69,7 @@
     <div class="container" id="c1">
         <h3 style="padding-top:10px;"> EXPERIENCE </h3>
         <!-- Research and Teaching Interests -->
-        <div id="projects-overview">
+        <!--<div id="projects-overview">
             <p>
                 <b style="font-size: 16pt;"> Research and Teaching Interests </b>
                 <ul>
@@ -80,7 +80,7 @@
                     <li> Wearable Sensors and Embedded Systems </li>
                 </ul>
             </p>
-        </div>
+        </div>-->
         <!-- Research Experience -->
         <h3 style="padding-top:10px;"> RESEARCH EXPERIENCE </h3>
         <!--Collapse/ Expand Panel -->
