--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="courses.html"> COURSES </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> EDUCATION </a>
+                    <a class="nav-link" href="experience.html"> EDUCATION </a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="projects.html"> PROJECTS  </a>
