Removed all html navigation list items
Placed them in a single JS file navi.js

--- a/experience.html
+++ b/experience.html
@@ -31,36 +31,12 @@
         <p class="name" style="color:black; padding-top:10px; font-weight:bold;"> Dr. Ting Zhang </p>
         <!--  -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul style="list-style-type:none;">
+            <ul style="list-style-type:none;" id = "listNavi">
                 <!-- to add section heading modify id of section to redirect to
                 <li class="nav-item">
                     <a class="nav-link" href="nameOfSection.html"> section title </a>
                 </li>
-                                    -->
-                <li class="nav-item">
-                    <a class="nav-link" href="home.html"> HOME </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="courses.html"> COURSES </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> EDUCATION </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="projects.html"> PROJECTS  </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="experience.html"> EXPERIENCE </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> PUBLICATIONS </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> CONTACT </a>
-                </li>
+
             </ul>
         </div>
     </nav>
@@ -377,7 +353,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-
+    <script type="text/javascript" src="navi.js"></script>
 </body>
 
 </html>
