--- a/courses.html
+++ b/courses.html
@@ -33,36 +33,13 @@
         <p class="name" style="color:black; padding-top:10px; font-weight:bold;"> Dr. Ting Zhang </p>
         <!--  -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul style="list-style-type:none;">
+            <ul style="list-style-type:none;" id = "listNavi">
                 <!-- to add section heading modify id of section to redirect to
                 <li class="nav-item">
                     <a class="nav-link" href="#"> section title </a>
                 </li>
                                     -->
-                <li class="nav-item">
-                    <a class="nav-link" href="home.html"> HOME </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT </a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="courses.html"> COURSES </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> EDUCATION </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="projects.html"> PROJECTS </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="experience.html"> EXPERIENCE </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> PUBLICATIONS </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"> CONTACT </a>
-                </li>
+
 
             </ul>
         </div>
@@ -116,5 +93,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="navi.js"></script>
 </body>
 </html>
